--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -1,6 +1,4 @@
 name: Deploy Ambiente X
-env:
-  RAMA_ACTIVA: ${GITHUB_REF_NAME}
 on:
   repository_dispatch:
     types: [run-jira-deploy]
@@ -10,4 +8,4 @@ jobs:
     steps:
       - name: Obteniendo datos
         run: |
-          echo "Rama $RAMA_ACTIVA"
+          echo "$GITHUB_REF_NAME will serve the internal behavior of GitHub Action"
