--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -1,6 +1,4 @@
 name: Deploy Ambiente X
-env:
-    RAMA_ACTUAL: ${{ env.GITHUB_REF_NAME }}
 on:
   repository_dispatch:
     types: [run-jira-deploy]
@@ -10,4 +8,4 @@ jobs:
     steps:
       - name: Obteniendo datos
         run: |
-          echo "$RAMA_ACTUAL will serve the behavior of the GitHub Slug action"
+          echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
