--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -7,6 +7,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Obteniendo datos
+        env:
+            RAMA: ${GITHUB_REF_NAME}
         run: |
-          echo running on branch ${GITHUB_REF_NAME}
+          if [ RAMA -eq "qa" ];
+          then
+            echo running on branch ${GITHUB_REF_NAME}
+          else
+            echo No esta en la rama
+          fi
 
