--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -6,12 +6,23 @@ jobs:
   deploy-qa:
     runs-on: ubuntu-20.04
     steps:
-      - name: Obteniendo datos
+      - name: Obteniendo datos QA
         run: |
           if [[ "${GITHUB_REF_NAME}" = "master" ]];
           then
             echo running on branch ${GITHUB_REF_NAME}
           else
-            echo No esta en la rama
+            echo No esta en la rama QA
           fi
+    deploy-uat:
+    runs-on: ubuntu-20.04
+    steps:
+        - name: Obteniendo datos UAT
+        run: |
+            if [[ "${GITHUB_REF_NAME}" = "master" ]];
+            then
+            echo running on branch ${GITHUB_REF_NAME}
+            else
+            echo No esta en la rama UAT
+            fi
 
