captura de parametros

--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -4,8 +4,11 @@ env:
   REPO_NAME: example-event-dispatcher-workflows
   GITHUB_TOKEN: ${{ secrets.TOKEN }}
 on:
-  repository_dispatch:
-    types: [run-ping]
+  workflow_call:
+    inputs:
+      config-path:
+        required: true
+        type: string
 jobs:
   ping:
     runs-on: ubuntu-latest
