--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -15,8 +15,6 @@ jobs:
           else
             echo No esta en la rama QA
           fi
-  call-workflow-database:
-    if: github.event.client_payload.command == 'ping'
+  call-workflow-1-in-local-repo:
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
-    if: github.event.client_payload.command == 'pong'
-    uses: mapuga/example-event-dispatcher-workflows/.github/workflows/pong.yml@master
+
