--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -2,19 +2,21 @@ name: Deploy Ambiente X
 on:
   repository_dispatch:
     types: [run-jira-deploy]
+env:
+  APP_i365: ""
+  APP_API: ""
+  APP_SABE2: ""
+  APP_SABE3: ""
+  DATABASE: ""
 jobs:
   deploy-qa:
     runs-on: ubuntu-20.04
     steps:
       - name: Obteniendo datos QA
         run: |
-          if [[ "${GITHUB_REF_NAME}" = "master" ]];
-          then
-            echo running on branch ${GITHUB_REF_NAME}
-            echo el comando es ${{ github.event.client_payload.command }}
-          else
-            echo No esta en la rama QA
-          fi
+          applications=${{ github.event.client_payload.command }}
+          applications_aps=$("$applications" | tr ',' '')
+          echo applications_aps
   call-workflow-1-in-local-repo:
     if: github.event.client_payload.command == 'ping'
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
