--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -15,8 +15,10 @@ jobs:
     steps:
       - name: Obteniendo datos QA
         run: |
-          applications=$APPLICATIONS
-          echo applications
+          for i in $APPLICATIONS
+          do
+            echo $i
+          done
   call-workflow-1-in-local-repo:
     if: github.event.client_payload.command == 'ping'
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
