--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -21,9 +21,10 @@ jobs:
             if [ $i == "i365" ]
             then
               echo "detecto i365"
+              APP_i365="i365"
             fi
           done
   call-workflow-1-in-local-repo:
-    if: github.event.client_payload.command == 'ping'
+    if: ${{ env.APP_i365 == 'i365' }}
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
 
