--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -24,7 +24,8 @@ jobs:
               APP_i365="i365"
             fi
           done
+          echo $APP_i365
   call-workflow-1-in-local-repo:
-    if: ${{ env.APP_i365 == 'i365' }}
+    if: github.event.client_payload.command == 'ping'
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
 
