--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -13,7 +13,7 @@ jobs:
   deploy-qa:
     runs-on: ubuntu-20.04
     steps:
-      - name: Obteniendo datos QA
+      - name: Obteniendo instrucciones
         run: |
           STR_APPS=$(echo $APPLICATIONS | sed 's/,//g')
           for i in $STR_APPS
@@ -26,6 +26,6 @@ jobs:
           done
           echo $APP_i365
   call-workflow-1-in-local-repo:
-    if: github.event.client_payload.command == 'ping'
+    if: ${{ github.env.APP_i365 == 'i365' }}
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
 
