cambios pruebas procesar apps

--- a/.github/workflows/detect-rama.yml
+++ b/.github/workflows/detect-rama.yml
@@ -1,10 +1,9 @@
 name: Deploy Ambiente X
-env:
-  APPLICATIONS: ${{github.event.client_payload.command}}
-  APP_i365: "i365"
 on:
   repository_dispatch:
     types: [run-jira-deploy]
+env:
+  APPLICATIONS: ${{github.event.client_payload.command}}
 jobs:
   setting-data:
     runs-on: ubuntu-20.04
@@ -19,6 +18,8 @@ jobs:
               echo "APP_i365=i365" >> "$GITHUB_ENV"
             fi
           done
+      - name: Set variables
+        run: echo "APP_i365" >> $GITHUB_ENV
   call-workflow-i365:
     if: github.env.APP_i365 == 'i365'
     uses: mapuga/example-event-dispatcher-workflows/.github/workflows/ping.yml@master
